# esp-csi

./: CMakeLists.txt  csi_data_log.txt  csi_live_visualizer.py  csi_visualizer.py  visualizer.py  visualizer_std.py
components/esp-radar/: CMakeLists.txt
examples/esp-radar/console_test/main/: app_main.c
examples/esp-radar/console_test/tools/: esp_csi_tool.py
examples/esp-radar/console_test/tools/config/: gui_config.json
examples/get-started/csi_recv/: CMakeLists.txt
examples/get-started/csi_recv/main/: app_main.c
examples/get-started/csi_recv_router/: CMakeLists.txt
examples/get-started/csi_send/: CMakeLists.txt
examples/get-started/csi_send/main/: app_main.c
main/: main.c
python_utils/: serial_measure_rate.py  serial_plot_csi_live.py
